fixed heading alignment

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 h1 {
     display: grid;
     grid-column: 2;
-    /* text-align: center; */
+    text-align: center;
     font-size: 2.5rem;
     padding: 1.5rem ;
 }
